tests/NormalTests/paczka1/fuzzy1/63777312.err
Error in line 2: S553 S593 24,9
Error in line 7: GhNTwDF8 S553 23,4
Error in line 9: tMFi4 S734 46,4
Error in line 23: S553 A362 89,3
Error in line 12: i73lm S553 96,5
Error in line 33: PUyzK S593 15,6
Error in line 31: i73lm S593 69,2
